--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Install criterion
+        run: sudo apt-get install -y libghc-criterion-dev
       - name: Make tests_run
         run: make tests_run
       - name: SonarCloud Scan
