--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Install criterion
-        run: sudo apt-get install -y libghc-criterion-dev
+        run: sh scripts/install_criterion.sh
       - name: Make tests_run
         run: make tests_run
       - name: SonarCloud Scan
