--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,4 +1,4 @@
-name: Push to sonarcloud
+name: Build
 on:
   push:
     branches:
@@ -13,12 +13,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Get master
-        run: git fetch origin master
-      - name: Install criterion
-        run: sh scripts/install_criterion.sh
-      - name: Make tests_run
-        run: make tests_run
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
