--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,12 @@
-sonar.projectKey=myftp
+sonar.projectKey=ftp
 sonar.organization=frnikho
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=My_Ftp
-sonar.projectVersion=1.0
+#sonar.projectName=FTP
+#sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=.
-sonar.cfamily.gcov.reportsPath=.
+#sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
-sonar.sourceEncoding=UTF-8
+#sonar.sourceEncoding=UTF-8
